kubernetes/apps/database/dragonfly/cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dragonfly-lb
  annotations:
    io.cilium/lb-ipam-ips: 10.99.8.207
spec:
  type: LoadBalancer
  ports:
    - name: dragonfly
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: dragonfly
